syntax = "proto3";

option go_package = "gomen/transport/grpc";
package grpc;

message User {
  int64 id = 1;
  string username = 2;
  string email = 3;
  string api_key = 4;
}

message UserList {
  repeated User list = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  User user = 1;
}

service Auth {
  rpc Login(LoginRequest) returns (LoginResponse) {}
}